--- a/quotes-app/src/app/quotes/quotes.component.css
+++ b/quotes-app/src/app/quotes/quotes.component.css
@@ -1,10 +1,12 @@
- .quote-card-container {
-  min-height: 420px;
+.quote-card-container {
+  height: 100%;
+  max-height: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
-  padding-top: 3rem;
-  padding-bottom: 3rem;
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
+  box-sizing: border-box;
 }
 
 .quote-card-wrapper {
