--- a/quotes-app/src/app/quotes/quotes.component.html
+++ b/quotes-app/src/app/quotes/quotes.component.html
@@ -11,7 +11,7 @@
     </div>
   </header>
 
-  <main class="flex-1 flex flex-col items-center justify-center px-4 sm:px-6 lg:px-8 xl:px-12 py-10">
+  <main class="flex-1 min-h-0 flex flex-col items-center justify-center px-4 sm:px-6 lg:px-8 xl:px-12 py-6 sm:py-8">
     <div class="quote-card-container mb-6 sm:mb-8 w-full">
       @if (isLoadingQuote()) {
         <div class="quote-card-wrapper w-full">
